--- a/consultoria.html
+++ b/consultoria.html
@@ -26,13 +26,13 @@
 		<div class="main_menu_bg navbar-fixed-top wow slideInDown menu_page" data-wow-duration="1s">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-sm-3">
+					<div class="col-md-3 col-sm-3 col-xs-6">
 						<div class="single_banner_text wow zoomIn" data-wow-duration="1s">
 							<img src="logo/logo.png"/>
 						</div>
 					</div>
 					<div class="nave_menu col-md-9">
-										<nav class="navbar navbar-default">
+					<nav class="navbar navbar-default">
 					  <div class="container-fluid">
 						<!-- Brand and toggle get grouped for better mobile display -->
 						<div class="navbar-header">
@@ -95,6 +95,7 @@
 							  <!--<img src="images/servicos.png" width="509" height="318" class="wow slideInRight pull-right" data-wow-duration="2s">-->
 							  <li>
 							  	<img src="images/check.png" class="check" />Orientamos na seleção de matérias-primas economicamente  viáveis para a fabricação de alimentos. </li>
+							  	<img src="images/comida.jpg" style="width: 50%; float: right;">
 							  <li>
 							  	<img src="images/check.png" class="check" />Recomendamos parâmetros físico-químicos, tecnológicos  e microbiológicos para produtos alimentares em processamento e produtos finais.</li>
 							  <li>
