--- a/index.full.html
+++ b/index.full.html
@@ -28,7 +28,7 @@
 		<div class="main_menu_bg navbar-fixed-top wow slideInDown" data-wow-duration="1s">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-sm-3">
+					<div class="col-md-3 col-sm-3 col-xs-6">
 						<div class="single_banner_text wow zoomIn" data-wow-duration="1s">
 							<img src="logo/logo.png"/>
 						</div>
