--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="main_menu_bg navbar-fixed-top wow slideInDown" data-wow-duration="1s">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-sm-3">
+					<div class="col-md-3 col-sm-3 col-xs-6">
 						<div class="single_banner_text wow zoomIn" data-wow-duration="1s">
 							<img src="logo/logo.png"/>
 						</div>
@@ -63,8 +63,8 @@
 								</div>
 							</li>
 							<li><a href="livros.html">LIVROS</a></li>
-							<li><a href="informacoes.html">INFORMAÇÕES</a></li>
-							<li><a href="#noticias">NOTÍCIAS</a></li>
+							<li class="hidden"><a href="informacoes.html">INFORMAÇÕES</a></li>
+							<li class="hidden"><a href="noticias.html">NOTÍCIAS</a></li>
 							<li><a href="contato.html">CONTATO</a></li>
 						  </ul>
 						</div><!-- /.navbar-collapse -->
@@ -108,7 +108,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="features_content text-left">
-					<div class="col-md-9">
+					<div class="col-md-9 col-xs-12">
 						<div class="sinle_features wow slideInUp" data-wow-duration="1s">
 							<h5>EMPRESA</h5>
 							<br/>
@@ -117,10 +117,10 @@
 							<p>Nosso objetivo é fornecer-lhe consultoria online, que lhe traga e nos dê a mesma satisfação que sempre tivemos, atuando nesta área tão complexa. Esperamos que este serviço também agregue valor à sua experiência profissional.</p>
 						</div>
 					</div>
-					<div class="col-md-3">
-						<div class="sinle_features wow slideInUp" data-wow-duration="1.5s">
+					<div class="col-md-3 col-sm-12 col-xs-12">
+						<div class="sinle_features wow slideInUp text-center" data-wow-duration="1.5s">
 							<img src="images/viviano.jpg" class="round"/>
-							<a class="text-center col-md-12" href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank">Viviano Cabrera Trigo</a>
+							<a class="text-center col-md-12 col-sm-12 col-xs-12" href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank">Viviano Cabrera Trigo</a>
 						</div>
 					</div>
 				</div>
@@ -133,12 +133,19 @@
 			<div class="sinle_features separetor invert"></div>
 			<div class="row">
 				<div class="features_content text-right">
-					<div class="col-md-3">
-						<div class="sinle_features wow slideInUp" data-wow-duration="1.5s">
+					<div class="col-xs-12 hidden-md">
+						<div class="sinle_features wow slideInUp" data-wow-duration="1s">
+							<h5>Você sabia?</h5>
+							<br/>
+							<p>Na década de 70, Viviano Cabrera Trigo sugeriu o filme que veda o bocal de embalagens de produtos hermeticamente, evitando contaminações microbiológicas e a entrada de corpos estranhos ou a violação da pureza de preodutos tais como maionese, pós achocolatados para o preparo de bebidas lácteas e outros. Esse método é utilizada até hoje em embalagens de alimentos presentes em nosso dia a dia nos produtos achados na praça.</p>
+						</div>
+					</div>
+					<div class="col-md-3 col-xs-12">
+						<div class="sinle_features wow slideInUp text-center" data-wow-duration="1.5s">
 							<img src="images/lacre.jpg" class="round"/>
 						</div>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 hidden-sm">
 						<div class="sinle_features wow slideInUp" data-wow-duration="1s">
 							<h5>Você sabia?</h5>
 							<br/>
@@ -154,7 +161,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="main_abouts">
-					<div class="col-md-6 col-sm-6 col-xs-12">
+					<div class="col-md-6 col-sm-12 col-xs-12 over">
 						<div class="single_abouts wow slideInLeft" data-wow-duration="2s">
 							<div class="head_title text-center">
 								<h2>PRODUZA ALIMENTOS COM</h2>
@@ -172,7 +179,7 @@
 							
 					</div>
 				</div>
-				<div class="col-md-6 col-sm-6 col-xs-12">
+				<div class="col-md-6 col-sm-8 col-xs-9 col-xs-offset-3 under under-img">
 						<div class="single_abouts wow slideInRight text-center" data-wow-duration="2s">
 							<img src="images/milk.png" alt="" style="margin-top: -80px; width: 50%;">
 						</div>
@@ -182,6 +189,7 @@
 	</section><!-- End of Abouts Section -->
 
 	<section id="abouts" class="abouts sections" style="padding-top:0">
+		<div style="margin-top: 30px" class="hidden-md"></div>
 		<div class="container">
 			<div class="row">
 				<div class="main_abouts">
@@ -192,12 +200,13 @@
 						</div>
 					</div>
 					<br/>
-					<div class="col-md-6 col-sm-6 col-xs-12">
+					<div class="col-md-6 col-sm-12 col-xs-12">
 						<div class="single_abouts wow slideInLeft text-center" data-wow-duration="2s">
-							<img src="images/proteina.png" alt="" style="width: 100%;">
+							<img src="images/servicos.png" alt="" style="width: 80%;">
 						</div>
 					</div>
-					<div class="col-md-6 col-sm-6 col-xs-12">
+					<div class="col-md-6 col-sm-12 col-xs-12">
+						<div style="margin-top: 30px" class="hidden-md"></div>
 						<div class="single_abouts xs wow slideInRight" data-wow-duration="2s">
 							<p><img src="images/check.png" /> Redução dos custos de produção.</p>
 							<br/>
