--- a/info.html
+++ b/info.html
@@ -62,7 +62,7 @@
 								</li>
 								<li><a href="livros.html">LIVROS</a></li>
 								<li class="active"><a href="informacoes.html">INFORMAÇÕES</a></li>
-								<li><a href="noticias.html">NOTÍCIAS</a></li>
+								<li class="hidden"><a href="noticias.html">NOTÍCIAS</a></li>
 								<li><a href="contato.html">CONTATO</a></li>
 							  </ul>
 							</div><!-- /.navbar-collapse -->
@@ -80,6 +80,40 @@
 	
 	<section id="banner" class="banner menu"></section><!-- End of Banner Section -->
 	
+<section id="abouts" class="abouts sections li single">
+		<div class="container">
+			<div class="row">
+				<div class="main_abouts wow zoomIn" data-wow-duration="2s">
+					<div class="col-md-12 col-sm-12 col-xs-12">
+						<div class="single_abouts">
+							<div class="head_title text-center">
+								<p><b>Farofa algumas vezes é a causa de toxi-alimentação</b></p>
+								<div class="separetor"></div>
+							</div>
+						</div>
+					</div>	
+					<div class="col-md-offset-2 col-md-8 col-sm-8 col-xs-8">
+						<img src="images/farofa.jpg" style="width: 100%; box-shadow: 0 0 10px #484848; margin-bottom: 80px"/>
+					</div>
+					<div class="col-md-offset-1 col-md-10 col-sm-10 col-xs-10">
+						<div class="single_abouts text-justify">
+							<p class="minus">Este prato genuinamente á base de farinha de mandioca crua, farinha de milho, carnes suína manufaturadas e defumadas, frutas secas, sal e bastante gordura  que lhe dão plasticidade e sabor.<p>
+							<p class="minus">A contaminação com Bacillus cereus é frequente e os sintomas produzidos por esta bactéria causadora da doença apresentam sintomas críticos. Os outros componentes do prato quase todos já tiveram cozimento suficiente para não serem causadores da contaminação. As farinhas que são componentes do alimento em maior proporção pela sua manufatura necessitam de  intenso cozimento; por estarem fabricadas potencilmente sem higiene assegurada, constituem assim “porta de entrada” da contaminação a partir do solo com Bacillus cereu  que desencadeiam enfermidade gastrointestinal grave.<p>
+							<p class="minus">Um bom cozimento no forno seria necessário, e  útil para destruir o gérmen patogênico no alimento. É suficiente para a sua inativação 75º a 80ºC  por poucos minutos, desafortunadamente a farinha cozida no forno à temperatura que destrói a bactéria, deixa na farofa um paladar a queimado,  e sua cor agradável muda e o micróbio tem  possibilidade resistir e produzir a toxi-alimentação.<p>
+							<br/>
+							<p class="minus"><strong>Para saber mais, entre em contato conosco <a href="contato.html">aqui</a></strong><p>
+							<br/>
+							<p class="minus">
+								<strong style="font-size: 12px;">Fonte: BERGEY´S Manual of Determinative Bacteriology 9th Edition; VCT Consuloria</strong>
+							<p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>	
+	</section>
+
 
 
 	<section class="rodape" >
