--- a/livros.html
+++ b/livros.html
@@ -26,7 +26,7 @@
 		<div class="main_menu_bg navbar-fixed-top wow slideInDown menu_page" data-wow-duration="1s">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-sm-3 slideInLeft">
+					<div class="col-md-3 col-sm-3 col-xs-6 slideInLeft">
 						<div class="single_banner_text wow zoomIn" data-wow-duration="1s">
 							<img src="logo/logo.png"/>
 						</div>
@@ -61,8 +61,8 @@
 									</div>
 								</li>
 								<li class="active"><a href="livros.html">LIVROS</a></li>
-								<li><a href="informacoes.html">INFORMAÇÕES</a></li>
-								<li><a href="noticias.html">NOTÍCIAS</a></li>
+								<li class="hidden"><a href="informacoes.html">INFORMAÇÕES</a></li>
+								<li class="hidden"><a href="noticias.html">NOTÍCIAS</a></li>
 								<li><a href="contato.html">CONTATO</a></li>
 							  </ul>
 							</div><!-- /.navbar-collapse -->
@@ -84,13 +84,22 @@
 		<div class="container">
 			<div class="row">
 				<div class="main_abouts wow zoomIn" data-wow-duration="2s">
-					<div class="col-md-8 col-sm-8 col-xs-12">
+					<div class="col-md-8 col-sm-12 col-xs-12">
 						<div class="single_abouts">
 							<div class="head_title text-center">
 								<a href="/images/resumo-do-livro1.jpg" target="_blank"><h2>Manual Prático de Higiene e Sanidade nas Unidades de Alimentação e Nutrição</h2></a>
 								<div class="separetor"></div>
 								<p><a href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank">Viviano Cabrera Trigo</a></p>
 							</div>
+						</div>
+
+						<div class="col-md-4 col-sm-6 col-xs-12 hidden-md">
+							<a href="/images/resumo-do-livro1.jpg" target="_blank"><img src="images/livro1.jpg" class="livro" /></a>
+							<div class="single_abouts text-center">
+								<p><b style="font-size: 15px; font-family: 'Shadows Into Light Two', cursive;">183 páginas - Segunda Edição</b></p>
+								<h2>R$ 45,00</h2>
+							</div>	
+							<div style="margin-bottom: 30px" class="hidden-md"></div>
 						</div>
 
 						<div class="single_abouts text-left">
@@ -114,11 +123,11 @@
 							<p>Para realizar a compra entre em contato <a href="contato.html">clicando aqui</a> ou por telefone que iremos lhe instruir como prosseguir.</p>
 							</div>
 					</div>
-					<div class="col-md-4 col-sm-4 col-xs-12">
+					<div class="col-md-4 col-sm-4 col-xs-12 hidden-sm">
 						<a href="/images/resumo-do-livro1.jpg" target="_blank"><img src="images/livro1.jpg" class="livro" /></a>
 						<div class="single_abouts text-center">
-						<p><b>183 páginas - Segunda Edição</b></p>
-						<h2>R$ 45,00</h2>
+							<p><b style="font-size: 15px; font-family: 'Shadows Into Light Two', cursive;">183 páginas - Segunda Edição</b></p>
+							<h2>R$ 45,00</h2>
 						</div>	
 					</div>
 				</div>
@@ -131,12 +140,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="main_abouts wow zoomIn" data-wow-duration="2s">
-					<div class="col-md-4 col-sm-4 col-xs-12">
+					<div class="col-md-4 col-sm-6 col-xs-12 hidden-sm">
 						<a href="http://alimentos.bio.br/site/Memorias_Profissionais.pdf" target="_blank"><img src="images/livro2.jpg" class="livro" /></a>
-						<p><b>111 páginas - Primeira Edição</b></p>
-						<h2>R$ 35,00</h2>
+						<div class="single_abouts text-center">
+							<p><b style="font-size: 15px; font-family: 'Shadows Into Light Two', cursive;">111 páginas - Primeira Edição</b></p>
+							<h2>R$ 35,00</h2>
+						</div>
 					</div>
-					<div class="col-md-8 col-sm-8 col-xs-12">
+					<div class="col-md-8 col-sm-12 col-xs-12">
 						<div class="single_abouts">
 							<div class="head_title text-center">
 								<a href="http://alimentos.bio.br/site/Memorias_Profissionais.pdf" target="_blank"><h2>Lições de um Pioneiro em Higiene de Alimentos</h2></a>
@@ -144,6 +155,15 @@
 								<p><a href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank">Viviano Cabrera Trigo</a></p>
 							</div>
 						</div>
+
+						<div class="col-md-4 col-sm-6 col-xs-12 hidden-md">
+						<a href="http://alimentos.bio.br/site/Memorias_Profissionais.pdf" target="_blank"><img src="images/livro2.jpg" class="livro" /></a>
+						<div class="single_abouts text-center">
+							<p><b style="font-size: 15px; font-family: 'Shadows Into Light Two', cursive;">111 páginas - Primeira Edição</b></p>
+							<h2>R$ 35,00</h2>
+						</div>	
+						<div style="margin-bottom: 30px" class="hidden-md"></div>	
+					</div>
 
 						<div class="single_abouts text-left">
 							<p>O livro <b>Lições de um Pioneiro</b> traz as lembranças e experiências do Microbiologista de alimentos e higienista, <a href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank"><b>Viviano Cabrera Trigo</b></a>, que criou diversas metodologias sanitárias utilizadas nas cozinhas industriais no Brasil e no mundo até nossos dias.
