--- a/vivianizacao.html
+++ b/vivianizacao.html
@@ -26,7 +26,7 @@
 		<div class="main_menu_bg navbar-fixed-top wow slideInDown menu_page" data-wow-duration="1s">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-sm-3 slideInLeft">
+					<div class="col-md-3 col-sm-3  col-xs-6 slideInLeft">
 						<div class="single_banner_text wow zoomIn" data-wow-duration="1s">
 							<img src="logo/logo.png"/>
 						</div>
@@ -61,9 +61,9 @@
 									</div>
 								</li>
 								<li><a href="livros.html">LIVROS</a></li>
-								<li><a href="info.html">INFORMAÇÕES</a></li>
-								<li><a href="#noticias">NOTÍCIAS</a></li>
-								<li><a href="#contato">CONTATO</a></li>
+								<li class="hidden"><a href="informacoes.html">INFORMAÇÕES</a></li>
+								<li class="hidden"><a href="noticias.html">NOTÍCIAS</a></li>
+								<li><a href="contato.html">CONTATO</a></li>
 							  </ul>
 							</div><!-- /.navbar-collapse -->
 					  </div><!-- /.container-fluid -->
