--- a/info.html
+++ b/info.html
@@ -63,7 +63,7 @@
 								<li><a href="livros.html">LIVROS</a></li>
 								<li class="active"><a href="informacoes.html">INFORMAÇÕES</a></li>
 								<li class="hidden"><a href="noticias.html">NOTÍCIAS</a></li>
-								<li><a href="contato.html">CONTATO</a></li>
+								<li><a href="contato.php">CONTATO</a></li>
 							  </ul>
 							</div><!-- /.navbar-collapse -->
 					  </div><!-- /.container-fluid -->
