--- a/index.full.html
+++ b/index.full.html
@@ -54,7 +54,7 @@
 							<li><a href="#features">Empresa</a></li>
 							<li><a href="#special">SERVIÇOS</a></li>
 							<li><a href="#abouts">LIVROS</a></li>
-							<li><a href="#footer">INFORMAÇÕES</a></li>
+							<!-- <li><a href="#footer">INFORMAÇÕES</a></li> -->
 							<li><a href="#footer">NOTÍCIAS</a></li>
 							<li><a href="#footer">CONTATO</a></li>
 							
