--- a/livros.html
+++ b/livros.html
@@ -169,7 +169,7 @@
 						<div class="single_abouts text-left">
 							<p>O livro <b>Lições de um Pioneiro</b> traz as lembranças e experiências do Microbiologista de alimentos e higienista, <a href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank"><b>Viviano Cabrera Trigo</b></a>, que criou diversas metodologias sanitárias utilizadas nas cozinhas industriais no Brasil e no mundo até nossos dias.
 
-							<p>Suas experiências grandes em empresas como Varig e Knorr, a atuação na área de controle de qualidade e pesquisas em toda America Latina, além da realização de palestras e seminários científicos para conservação e produção de alimentos no Brasil e no exterior. Além de alguns dos métodos por ele criados.</p>
+							<p>Suas experiências grandes em empresas como Varig e RM Brasil (Corn C.), a atuação na área de controle de qualidade e pesquisas em toda America Latina, além da realização de palestras e seminários científicos para conservação e produção de alimentos no Brasil e no exterior. Além de alguns dos métodos por ele criados.</p>
 							<br/><br/>
 							
 							<p><b>Como Comprar?</b></p>
