--- a/consultoria.html
+++ b/consultoria.html
@@ -62,7 +62,7 @@
 								</div>
 							</li>
 							<li><a href="livros.html">LIVROS</a></li>
-							<li class="hidden"><a href="informacoes.html">INFORMAÇÕES</a></li>
+							<!--<li class="hidden"><a href="informacoes.html">INFORMAÇÕES</a></li> -->
 							<li class="hidden"><a href="noticias.html">NOTÍCIAS</a></li>
 							<li><a href="contato.php">CONTATO</a></li>
 						  </ul>
