--- a/contato.html
+++ b/contato.html
@@ -64,7 +64,7 @@
 								</div>
 							</li>
 							<li><a href="livros.html">LIVROS</a></li>
-							<li class="hidden"><a href="informacoes.html">INFORMAÇÕES</a></li>
+							<!-- <li class="hidden"><a href="informacoes.html">INFORMAÇÕES</a></li> -->
 							<li class="hidden"><a href="noticias.html">NOTÍCIAS</a></li>
 							<li class="active"><a href="contato.php">CONTATO</a></li>
 						  </ul>
