--- a/index.full.html
+++ b/index.full.html
@@ -55,7 +55,7 @@
 							<li><a href="#special">SERVIÇOS</a></li>
 							<li><a href="#abouts">LIVROS</a></li>
 							<!-- <li><a href="#footer">INFORMAÇÕES</a></li> -->
-							<li><a href="#footer">NOTÍCIAS</a></li>
+							<!-- <li><a href="#footer">NOTÍCIAS</a></li> -->
 							<li><a href="#footer">CONTATO</a></li>
 							
 						  </ul>
@@ -286,7 +286,7 @@
 							</div>
 							
 							<p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Mais qualidade e conservação.</p>
-							<p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Menos conservantes.</p>
+							<p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Melhor processo de conservação.</p>
 							<p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Maior vida útil.</p>
 							<p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Menos custo de produção.</p>
 						</div>
