--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 							<br/>
 							<p><img src="images/check.png" /> Menor custo de produção.</p>
 							<br/>
-							<p><img src="images/check.png" /> Melhor processo de conservação.</p>
+							<p><img src="images/check.png" /> Mais qualidade e conservação.</p>
 							<br/>
-							<p><img src="images/check.png" /> Menos conservantes.</p>
+							<p><img src="images/check.png" /> Mehor processo de conservação.</p>
 							<br/>
 							<p><img src="images/check.png" /> Maior vida útil.</p>
 							
