--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							<br/>
 							<p><img src="images/check.png" /> Mais qualidade e conservação.</p>
 							<br/>
-							<p><img src="images/check.png" /> Mehor processo de conservação.</p>
+							<p><img src="images/check.png" /> Melhor processo de conservação sem conservantes químicos.</p>
 							<br/>
 							<p><img src="images/check.png" /> Maior vida útil.</p>
 							
@@ -223,7 +223,12 @@
 			</div>
 		</div>
 	</section><!-- End of Abouts Section -->
-
+	
+	<section class="rodape_viviano"  >
+	    <p>Viviano Cabrera Trigo<p>
+		<p><a href="mailto:carutorypa@gmail.com"></a></p>
+		<p>(47) 33299283</p>
+	</section>
 
 	<section class="rodape" >
 		<p>2019 &copy; <a href="mailto:maria.piontkowski@hotmail.com">Maria Cecília Piontkowski Alves</a></p>
