--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
 	
 	<section class="rodape_viviano"  >
 	    <p>Viviano Cabrera Trigo<p>
-		<p><a href="mailto:carutorypa@gmail.com"></a></p>
-		<p>(47) 33299283</p>
+		<p>Email: carutorypa@gmail.com</p>
+		<p>Telefone:(47) 33299283</p>
 	</section>
 
 	<section class="rodape" >
