--- a/index.html
+++ b/index.html
@@ -225,9 +225,11 @@
 	</section><!-- End of Abouts Section -->
 	
 	<section class="rodape_viviano"  >
+	  <div class="text-center">
 	    <p>Viviano Cabrera Trigo<p>
 		<p>Email: carutorypa@gmail.com</p>
 		<p>Telefone:(47) 33299283</p>
+	  <div>	
 	</section>
 
 	<section class="rodape" >
