--- a/livros.html
+++ b/livros.html
@@ -121,7 +121,7 @@
 							
 							<p><b>Como Comprar?</b></p>
 							<br/>
-							<p>Para realizar a compra entre em contato <a href="contato.html">clicando aqui</a> ou por telefone que iremos lhe instruir como prosseguir.</p>
+							<p>Para realizar a compra entre em contato <a href="contato.html">clicando aqui</a> ou pelo telefone (47) 3329-9283 que iremos lhe instruir como prosseguir.</p>
 							</div>
 					</div>
 					<div class="col-md-4 col-sm-4 col-xs-12 hidden-sm">
@@ -174,7 +174,7 @@
 							
 							<p><b>Como Comprar?</b></p>
 							<br/>
-							<p>Para realizar a compra entre em contato <a href="contato.html">clicando aqui</a> ou por telefone que iremos lhe instruir como prosseguir.</p>
+							<p>Para realizar a compra entre em contato <a href="contato.html">clicando aqui</a> ou pelo telefone (47) 3329-9283 que iremos lhe instruir como prosseguir.</p>
 							</div>
 					</div>
 				</div>
