--- a/livros.html
+++ b/livros.html
@@ -90,21 +90,22 @@
 							<div class="head_title text-center">
 								<a href="/images/resumo-do-livro1.jpg" target="_blank"><h2>Manual Prático de Higiene e Sanidade nas Unidades de Alimentação e Nutrição</h2></a>
 								<div class="separetor"></div>
-								<p><a href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank">Viviano Cabrera Trigo</a></p>
+								<!-- <p><a href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank">Viviano Cabrera Trigo</a></p> -->
+								<p>Viviano Cabrera Trigo</a></p>
 							</div>
 						</div>
 
 						<div class="col-md-4 col-sm-6 col-xs-12 hidden-md">
 							<a href="/images/resumo-do-livro1.jpg" target="_blank"><img src="images/livro1.jpg" class="livro" /></a>
 							<div class="single_abouts text-center">
-								<p><b style="font-size: 15px; font-family: 'Shadows Into Light Two', cursive;">183 páginas - Segunda Edição</b></p>
+								<p><b style="font-size: 15px; font-family: 'Shadows Into Light Two', cursive;">183 páginas - Terceira Edição</b></p>
 								<h2>R$ 45,00</h2>
 							</div>	
 							<div style="margin-bottom: 30px" class="hidden-md"></div>
 						</div>
 
 						<div class="single_abouts text-left">
-							<p>O livro <b>Manual Prático de Higiene e Sanidade nas Unidades de Alimentação e Nutrição</b>, que já está na sua segunda edição atualizado e revisado. Aborda os seguintes conteúdos:  
+							<p>O livro <b>Manual Prático de Higiene e Sanidade nas Unidades de Alimentação e Nutrição</b>, que já está na sua terceira edição atualizado e revisado. Aborda os seguintes conteúdos:  
 
 							<p><img src="images/check.png" /> Higiene pessoal</p>
 						
