--- a/consultoria.html
+++ b/consultoria.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Instituto Alimentos</title>
+	<meta name="keywords" content="conservação,alimentos,viviano cabrera trigo,consultoria">
+	<meta name="description" content="Assessoramos para a obtenção de maior “vida útil” em produtos alimentares, o que contribui para uma mais efetiva comercialização do seu produto; assim, podemos solucionar problemas como fermentação precoce de matérias primas e produtos finais, e mais..."/>
+	<meta name="og:image" content="/logo/logo.png"/>
+	<title>Instituto Alimentos - Consultoria</title>
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,300italic' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Merienda|Satisfy|Lobster+Two" rel="stylesheet">
@@ -121,7 +124,7 @@
 	</section><!-- End of Abouts Section -->
 
 	<section class="rodape" >
-		<p>2019 &copy; <a href="mailto:maria.piontkowski@hotmail.com">Maria Cecília Piontkowski Alves</a></p>
+		<p>2019 &copy; Desenvolvido por <a href="http://piontkowski.heliohost.org/" target="_blank">Maria Cecília Piontkowski Alves</a></p>
 	</section>
 	
 	
