--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="keywords" content="conservação,alimentos,viviano cabrera trigo">
+	<meta name="description" content="Somos especializados em processos de preparação e conservação de alimentos, área em que, pessoalmente, exercemos 45 anos de profícua atividade profissional. Desejamos transmitir-lhe nossa experiência, adquirida ao longo de todos estes anos de trabalho."/>
+	<meta name="og:image" content="/logo/logo.png"/>
 	<title>Instituto Alimentos</title>
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,300italic' rel='stylesheet' type='text/css'>
@@ -15,10 +18,8 @@
 	<link rel="stylesheet" href="css/owl-carousel/owl.carousel.css" />
 	<link rel="stylesheet" href="css/owl-carousel/owl.theme.css" />
 	<link rel="stylesheet" href="css/owl-carousel/owl.transitions.css">
-	
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/responsive.css" />
-
 	<link rel="shortcut icon" href="logo/favicon.png" />
 </head>
 <body>
@@ -233,7 +234,7 @@
 	</section>
 
 	<section class="rodape" >
-		<p>2019 &copy; <a href="mailto:maria.piontkowski@hotmail.com">Maria Cecília Piontkowski Alves</a></p>
+		<p>2019 &copy; Desenvolvido por <a href="http://piontkowski.heliohost.org/" target="_blank">Maria Cecília Piontkowski Alves</a></p>
 	</section>
 </div>	
 	
