--- a/livros.html
+++ b/livros.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Instituto Alimentos</title>
+	<meta name="keywords" content="conservação,alimentos,viviano cabrera trigo">
+	<meta name="description" content="Manual Prático de Higiene e Sanidade nas Unidades de Alimentação e Nutrição | Lições de um Pioneiro"/>
+	<meta name="og:image" content="/images/livro1.jpg"/>
+	<title>Instituto Alimentos - Livros</title>
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,300italic' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Merienda|Satisfy|Lobster+Two" rel="stylesheet">
@@ -184,7 +187,7 @@
 	</section>
 
 	<section class="rodape" >
-		<p>2019 &copy; <a href="mailto:maria.piontkowski@hotmail.com">Maria Cecília Piontkowski Alves</a></p>
+		<p>2019 &copy; Desenvolvido por <a href="http://piontkowski.heliohost.org/" target="_blank">Maria Cecília Piontkowski Alves</a></p>
 	</section>
 
 	<div class="scrollup">
