--- a/vivianizacao.html
+++ b/vivianizacao.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Instituto Alimentos</title>
+	<meta name="keywords" content="conservação,alimentos,viviano cabrera trigo,vivianização">
+	<meta name="description" content="Vivianização é um processo seguro e natural para a conservação de alimentos em geral, em relação a outros processos atualmente usados, realizado com procedimentos economicamente ao alcance de qualquer pequeno produtor."/>
+	<meta name="og:image" content="/images/grafico.png"/>
+	<title>Instituto Alimentos - Vivianização</title>
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,300italic' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Merienda|Satisfy|Lobster+Two" rel="stylesheet">
@@ -250,7 +253,7 @@ A "vivianização" é realizada imediatamente após a ordenha e não requer resf
 	</section>!-- End of Abouts Section -->
 
 	<section class="rodape" >
-		<p>2019 &copy; <a href="mailto:maria.piontkowski@hotmail.com">Maria Cecília Piontkowski Alves</a></p>
+		<p>2019 &copy; Desenvolvido por <a href="http://piontkowski.heliohost.org/" target="_blank">Maria Cecília Piontkowski Alves</a></p>
 	</section>
 
 	<div class="scrollup">
